# ibroadcast-tui

./: .env.example  AGENTS.md  LICENSE  README.md  debug_mpv.py  pyproject.toml  requirements-dev.txt  requirements.txt
src/ibroadcast_tui/: __init__.py  __main__.py  data_manager.py  database.py  main.py
src/ibroadcast_tui/api/: client.py
src/ibroadcast_tui/config/: settings.py  token_manager.py
src/ibroadcast_tui/player/: audio_player.py
src/ibroadcast_tui/ui/: app.py
tests/: test_api_client.py  test_data_manager_new.py  test_main.py  test_settings.py  test_token_manager.py  test_ui_integration.py
